--- a/src/ui/tag_editor.glade
+++ b/src/ui/tag_editor.glade
@@ -5,6 +5,10 @@
   <object class="GtkBox" id="tag_editor">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
+    <property name="margin_left">10</property>
+    <property name="margin_right">10</property>
+    <property name="margin_top">10</property>
+    <property name="margin_bottom">10</property>
     <property name="orientation">vertical</property>
     <child>
       <object class="GtkBox">
